[package]
name = "bochscpu"
version = "0.1.0"
authors = ["x"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
ctor = "0.1"
fnv = "1"
hashbrown = "0.5"
lazy_static = "1"
log = { version = "0.4", features = ["release_max_level_off"] }
unreachable = "1"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"

[build-dependencies]
cc = "1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
