[package]
name = "bochscpu"
version = "0.1.0"
authors = ["x"]
edition = "2024"

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
blake3 = "1"
ctor = "0.6.1"
fnv = "1"
log = { version = "0.4", features = ["release_max_level_off"] }
serde = { version = "1", features = ["derive"], optional = true }

[build-dependencies]
cc = "1"
reqwest = { version = "0.12.24", features = ["blocking"] }
zip = "6.0.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[profile.release-with-debuginfo]
inherits = "release"
debug = true
